unpackaged/main/default/objects/ClientListMember__c/ClientListMember__c.object-meta.xml
<CustomObject>
    <label>Client List Member</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Client List Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client List Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>