unpackaged/main/default/objects/ClientListMember__c/fields/CampaignTurnOver__c.field-meta.xml
<CustomField>
    <fullName>CampaignTurnOver__c</fullName>
    <label>Campaign Turn Over</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>