unpackaged/main/default/objects/ClientListMember__c/fields/ClientList__c.field-meta.xml
<CustomField>
    <fullName>ClientList__c</fullName>
    <label>Client List</label>
    <referenceTo>ClientList__c</referenceTo>
    <relationshipLabel>Client List Members</relationshipLabel>
    <relationshipName>ClientListMembers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>