unpackaged/main/default/objects/ClientListMember__c/fields/FirstContactDate__c.field-meta.xml
<CustomField>
    <fullName>FirstContactDate__c</fullName>
    <label>First Contact Date</label>
    <type>Date</type>
</CustomField>